<resources>
    <string name="app_name">DungeonCrawler</string>
    <string name="dungeon">Dungeon</string>
    <string name="crawler">Crawler</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid (5–25)</string>
    <string name="error_invalid_password">This password is invalid (5–25)</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="create_new_user">Create New User</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_unrecognized">There was an unrecognized error while logging in.</string>
    <string name="error_username_exists">This username already exists</string>
    <string name="error_unexpected">An unexpected error has occurred.</string>
    <string name="title_activity_character_list">Character List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dungeon_crawler">Dungeon Crawler</string>
    <string name="username">USERNAME</string>
    <string name="delete_character">Delete Character</string>
    <string name="create_character">Create Character</string>
    <string name="about">About</string>
    <string name="about_character_list">This screen allows you to create new characters, delete existing characters, or select a character to view more information about them.</string>
    <string name="character_creation">Character Creation</string>
    <string name="character_name">Name</string>
    <string name="level">Level</string>
    <string name="base_stats_including_race_bonuses">Base Stats (Including Race Bonuses)</string>
    <string name="base_hp">Base HP</string>
    <string name="armor_class">Armor Class</string>
    <string name="feat_list_seperate_by_commas">Feat List : Separate by Commas</string>
    <string name="item_list_separate_by_commas">Item List : Separate by Commas</string>
    <string name="proficiency_list_separate_by_commas">Proficiency List : Separate by Commas</string>
    <string name="cantrip_spells_separate_by_commas">Cantrip Spells : Separate by Commas</string>
    <string name="level_1_spells_separate_by_commas">Level 1 Spells : Separate by Commas</string>
    <string name="level_2_spells_separate_by_commas">Level 2 Spells : Separate by Commas</string>
    <string name="level_3_spells_separate_by_commas">Level 3 Spells : Separate by Commas</string>
    <string name="level_4_spells_separate_by_commas">Level 4 Spells : Separate by Commas</string>
    <string name="level_5_spells_separate_by_commas">Level 5 Spells : Separate by Commas</string>
    <string name="level_6_spells_separate_by_commas">Level 6 Spells : Separate by Commas</string>
    <string name="level_7_spells_separate_by_commas">Level 7 Spells : Separate by Commas</string>
    <string name="level_8_spells_separate_by_commas">Level 8 Spells : Separate by Commas</string>
    <string name="level_9_spells_separate_by_commas">Level 9 Spells : Separate by Commas</string>
    <string name="finish">Finish</string>
    <string name="spellbook">Spellbook</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="con">CON</string>
    <string name="intel">INT</string>
    <string name="wis">WIS</string>
    <string name="cha">CHA</string>
    <string name="add_weapon">Add Weapon</string>
    <string name="error_weapon_not_specified">Necessary Field Empty, Weapon not Added</string>


    <string-array name="classes">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>

    <string-array name="races">
        <item>Dragonborn</item>
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Gnome</item>
        <item>Half Elf</item>
        <item>Half Orc</item>
        <item>Halfling</item>
        <item>Human</item>
        <item>Tiefling</item>
    </string-array>

    <string-array name="backgrounds">
        <item>Acolyte</item>
        <item>Charlatan</item>
        <item>Criminal</item>
        <item>Entertainer</item>
        <item>Folk Hero</item>
        <item>Guild Artisan</item>
        <item>Hermit</item>
        <item>Noble</item>
        <item>Outlander</item>
        <item>Sage</item>
        <item>Sailor</item>
        <item>Soldier</item>
        <item>Urchin</item>
    </string-array>

    <string-array name="alignments">
        <item>Lawful Good</item>
        <item>Neutral Good</item>
        <item>Chaotic Good</item>
        <item>Lawful Neutral</item>
        <item>True Neutral</item>
        <item>Chaotic Neutral</item>
        <item>Lawful Evil</item>
        <item>Neutral Evil</item>
        <item>Chaotic Evil</item>
    </string-array>
    <string name="title_activity_character_view">CharacterViewActivity</string>
    <string name="error_name_duplicate">You have a character with this name already</string>
    <string name="strength">Str</string>
    <string name="feat_list">Feat List</string>
    <string name="item_list">Item List</string>
    <string name="proficiency_list">Proficiency List</string>
    <string name="join_game">Join a Game</string>
    <string name="fetch_string">Fetching all current games.</string>
    <string name="no_games">There are currently no games.</string>
    <string name="game_name">Game Name :</string>
    <string name="game_password">Game Password :</string>
    <string name="view_character">View Character</string>
    <string name="send">Send</string>
    <string name="incorrect_game_password">Incorrect game password.</string>
    <string name="pass">Game Password</string>
    <string name="passwrd">Game Password</string>
    <string name="jn">Join</string>
    <string name="cncl">Cancel</string>
    <string name="error_join">Error attempting to join the game.</string>
</resources>
