<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hu.ait.android.dungeoncrawler.activities.CreateCharacterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scroll__quill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_creation"
            android:textSize="30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="5"
            android:gravity="center_vertical">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/character_name"
                android:layout_weight="2"
                android:id="@+id/etCCName"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/level"
                android:inputType="number"
                android:layout_weight="1"
                android:id="@+id/etCCLevel"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/spnCCClass"
                android:entries="@array/classes"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:weightSum="3">

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/spnCCRace"
                android:entries="@array/races"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/spnCCBackground"
                android:entries="@array/backgrounds"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/spnCCAlignment"
                android:entries="@array/alignments"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_stats_including_race_bonuses"
            android:paddingTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            android:layout_margin="10dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/str"
                android:inputType="number"
                android:id="@+id/etCCStr"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dex"
                android:inputType="number"
                android:id="@+id/etCCDex"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/con"
                android:inputType="number"
                android:id="@+id/etCCCon"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/intel"
                android:inputType="number"
                android:id="@+id/etCCInt"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/wis"
                android:inputType="number"
                android:id="@+id/etCCWis"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/cha"
                android:inputType="number"
                android:id="@+id/etCCCha"
                />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:weightSum="2">
            
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/armor_class"
                android:inputType="number"
                android:id="@+id/etCCAC"/>
            
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/base_hp"
                android:id="@+id/etCCBaseHP"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feat_list_seperate_by_commas"
            android:id="@+id/etCCFeatList"/>

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_list_separate_by_commas"
        android:id="@+id/etCCItemList"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/proficiency_list_separate_by_commas"
            android:id="@+id/etCCProfList"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_weapon"
            android:id="@+id/btnCCAddWeapon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellbook"
            android:visibility="gone"
            android:id="@+id/tvCCSpellbook"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cantrip_spells_separate_by_commas"
            android:id="@+id/etCCLvl0Spells"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/level_1_spells_separate_by_commas"
            android:id="@+id/etCCLvl1Spells"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/level_2_spells_separate_by_commas"
            android:id="@+id/etCCLvl2Spells"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/level_3_spells_separate_by_commas"
            android:id="@+id/etCCLvl3Spells"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/level_4_spells_separate_by_commas"
            android:id="@+id/etCCLvl4Spells"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/level_5_spells_separate_by_commas"
            android:id="@+id/etCCLvl5Spells"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/level_6_spells_separate_by_commas"
            android:id="@+id/etCCLvl6Spells"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/level_7_spells_separate_by_commas"
            android:id="@+id/etCCLvl7Spells"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/level_8_spells_separate_by_commas"
            android:id="@+id/etCCLvl8Spells"
            android:visibility="gone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/level_9_spells_separate_by_commas"
            android:id="@+id/etCCLvl9Spells"
            android:visibility="gone"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:id="@+id/btnFinish"/>

    </LinearLayout>


</ScrollView>
